--- a/lib/templates/admin_role.erb
+++ b/lib/templates/admin_role.erb
@@ -1,11 +1,11 @@
 Description: >
-  This stack will provision the admin role which LZ will use to deploy the landing zone.
+  This stack will provision the admin role which `dlz` will use to deploy the landing zone.
 
 Resources:
-  lzadm:
+  dlzadm:
     Type: AWS::IAM::Role
     Properties:
-      Path: /lz/admin/
+      Path: /dlz/admin/
       RoleName: lzadm
       AssumeRolePolicyDocument:
         Version: 2012-10-17
@@ -18,7 +18,7 @@ Resources:
               StringEquals:
                 sts:ExternalId: "<%= cfg[:sts_external_id] %>"
       Policies:
-        - PolicyName: lzadm-policy
+        - PolicyName: dlzadm-policy
           PolicyDocument:
             Version: 2012-10-17
             Statement:
