add stub for cloudformation stack set switch role
Signed-off-by: Daniel Stamer <daniel.stamer@cloudreach.com>

--- a/lib/templates/admin_role.erb
+++ b/lib/templates/admin_role.erb
@@ -5,8 +5,8 @@ Resources:
   dlzadm:
     Type: AWS::IAM::Role
     Properties:
-      Path: /dlz/admin/
-      RoleName: lzadm
+      Path: /dlz/
+      RoleName: dlzadm
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
